# NetDAQ

./: .gitignore  EQUATIONS.md  LICENSE  PROTOCOL.md  README.md  __main__.py  analog_channels.py  computed_channels.py  config.py  enums.py  info.py  main.py  netdaq.py  pyproject.toml  pyrightconfig.json  requirements.txt
lib/: netdaq.py
lib/config/: enums.py  equation.py  equation_compiler.py  instrument.py
lib/config/channels/: analog.py  base.py  computed.py
lib/utils/: encoding.py
netdaq/: __main__.py  netdaq.py
netdaq/config/: enums.py  equation.py  instrument.py
netdaq/config/channels/: analog.py
wireshark/: netdaq.lua
