[project]
name = "netdaq"
version = "0.1.0"
description = "NetDAQ control utility"
authors = [{name = "Doridian", email = "git@doridian.net"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyright>=1.1.396",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["netdaq"]

[project.scripts]
netdaq = "netdaq.__main__:main"
